# cs224n_gpt

./: .gitignore  README.md  check_progress.py  classifier.py  dataset_statistics.py  evaluation.py  generate_predictions.py  hyperparam_sweep.py  optimizer.py  paraphrase_detection.py  plot_quantization_figures.py  prepare_submit.py  pyproject.toml  quantization_test.py  requirements.txt  resume_sweep.sh  run_full_sweep.sh  sonnet_generation.py  test_para_from_checkpoint.py  test_sonnet_score.py
docs/: PARAPHRASE_SWEEP_REPORT.md
models/: gpt2.py
modules/: attention.py  gpt2_layer.py  lora 2.py
predictions/: combined_synthetic_subset_sweep.csv  combined_synthetic_subset_sweep_pro.csv  full-model-cfimdb-dev-out.csv  generated_sonnets.txt  generated_sonnets_dev.txt  generated_sonnets_dev_alpha16.txt  generated_sonnets_dev_alpha32.txt  generated_sonnets_dev_lora128.txt  generated_sonnets_dev_lora16.txt  generated_sonnets_dev_lora32.txt  generated_sonnets_dev_lora4.txt  generated_sonnets_dev_lora4_3e_4.txt  generated_sonnets_dev_lora64.txt  generated_sonnets_dev_lora8.txt  generated_sonnets_test_3_3.txt  last-linear-layer-cfimdb-dev-out.csv  last-linear-layer-sst-dev-out.csv  last-linear-layer-sst-test-out.csv  para-dev-output.csv  para-test-output.csv  qat4_metrics.json  transfer_from_sonnet_para_test.csv  transfer_gemini_flash_lite_para_dev.csv  transfer_gemini_flash_lite_para_test.csv
predictions_lora/: generated_sonnets_dev_alpha8.txt  generated_sonnets_dev_lora128.txt  generated_sonnets_dev_lora16.txt  generated_sonnets_dev_lora4_1e_3.txt  (+6 more)
prompts/: sonnets.py  (+2 more)
(+92 files in other folders)
