[project]
name = "cs224n-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm==4.58.0",
    "requests==2.25.1",
    "importlib-metadata==3.7.0",
    "filelock==3.0.12",
    "scikit-learn",
    "tokenizers==0.20",
    "explainaboard_client==0.0.7",
    "einops==0.8.0",
    "transformers==4.46.3",
    "sacrebleu==2.5.1",
    "vertexai>=1.71.1",
]
